--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- adobe font import for Flick Pick heading -->
+    <link rel="stylesheet" href="https://use.typekit.net/krt2bfx.css">
+
     <title>Flick Pick</title>
   </head>
   <body>
